[GOHW-7]: добален кэш
