# docs/person.swagger.json
@@ -16,6 +16,48 @@
     "application/json"
   ],
   "paths": {
+    "/v1/all_persons": {
+      "get": {
+        "operationId": "PersonService_ListAllPersons",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "requestType",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "enum": [
+              "PUBSUB",
+              "RETRY"
+            ],
+            "default": "PUBSUB"
+          },
+          {
+            "name": "key",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "PersonService"
+        ]
+      }
+    },
     "/v1/persons": {
       "get": {
         "operationId": "PersonService_ListPerson",
@@ -243,6 +285,15 @@
         }
       },
       "title": "Entity"
+    },
+    "apiRequestType": {
+      "type": "string",
+      "enum": [
+        "PUBSUB",
+        "RETRY"
+      ],
+      "default": "PUBSUB",
+      "title": "List all persons"
     },
     "apiUpdatePersonRequest": {
       "type": "object",
