# internal/commander/handler.go
@@ -2,20 +2,33 @@ package commander
 
 import (
 	"context"
+	"encoding/json"
 	"fmt"
 	"strconv"
 	"strings"
+	"time"
 
+	"github.com/google/uuid"
+	"gitlab.ozon.dev/igor.benko.1991/homework/internal/entity"
+	"gitlab.ozon.dev/igor.benko.1991/homework/internal/pkg/cache"
 	"gitlab.ozon.dev/igor.benko.1991/homework/internal/pkg/client"
+	"gitlab.ozon.dev/igor.benko.1991/homework/pkg/logger"
+)
+
+const (
+	RequestType_PUBSUB = 0
+	RequestType_RETRY  = 1
 )
 
 type personHandler struct {
 	client client.PersonClient
+	cache  cache.CacheClient
 }
 
-func NewPersonHandler(client client.PersonClient) *personHandler {
+func NewPersonHandler(client client.PersonClient, cache cache.CacheClient) *personHandler {
 	return &personHandler{
 		client: client,
+		cache:  cache,
 	}
 }
 
@@ -114,6 +127,77 @@ loop:
 
 	if count == 0 {
 		return "Персон нет"
+	}
+
+	return outputMessage.String()
+}
+
+func (c *personHandler) ListAll(ctx context.Context, args ...string) string {
+	if len(args) != 2 {
+		return "Неправильный формат. Должно быть /person list_all requestType"
+	}
+
+	requestType, err := strconv.Atoi(args[1])
+	if err != nil {
+		return "Неправильный формат типа запроса"
+	}
+
+	key := uuid.NewString()
+	resultCh := make(chan entity.Person)
+	ready := make(chan struct{})
+
+	go func(key string) {
+		ready <- struct{}{}
+
+		result := []entity.Person{}
+
+		if requestType == RequestType_PUBSUB {
+			ctx, cancel := context.WithCancel(ctx)
+			defer cancel()
+
+			dataCh := c.cache.Subscribe(ctx)
+			for item := range dataCh {
+				if item.Key == key {
+					err = json.Unmarshal(item.Payload, &result)
+					if err != nil {
+						logger.Warnf("Error while getting data from cache: %s", err.Error())
+					}
+					break
+				}
+			}
+		} else if requestType == RequestType_RETRY {
+			attempts := 3 //TODO: ынести в конфиг
+			for attempts >= 0 {
+				data, err := c.cache.Get(ctx, key)
+				if err == nil {
+					err = json.Unmarshal(data, &result)
+					if err == nil {
+						break
+					}
+				}
+
+				logger.Warnf("Error while getting data from cache: %s", err.Error())
+
+				attempts--
+				time.Sleep(1 * time.Second)
+			}
+		}
+
+		for _, person := range result {
+			resultCh <- person
+		}
+		close(resultCh)
+	}(key)
+
+	<-ready
+
+	outputMessage := strings.Builder{}
+	if err = c.client.ListAllPersons(ctx, key, uint32(requestType)); err != nil {
+		return err.Error()
+	}
+
+	for item := range resultCh {
+		outputMessage.WriteString(fmt.Sprintf("%d - %s %s\n", item.ID, item.LastName, item.FirstName))
 	}
 
 	return outputMessage.String()
